@@ -1,5 +1,5 @@
 /*
- * "$Id: auth.c,v 1.41.2.27 2004/06/29 13:15:10 mike Exp $"
+ * "$Id: auth.c,v 1.41.2.28 2004/10/04 19:48:56 mike Exp $"
  *
  *   Authorization routines for the Common UNIX Printing System (CUPS).
  *
@@ -15,7 +15,7 @@
  *       Attn: CUPS Licensing Information
  *       Easy Software Products
  *       44141 Airport View Drive, Suite 204
- *       Hollywood, Maryland 20636-3142 USA
+ *       Hollywood, Maryland 20636 USA
  *
  *       Voice: (301) 373-9600
  *       EMail: cups-info@cups.org
@@ -1780,5 +1780,5 @@ to64(char          *s,	/* O - Output string */
 
 
 /*
- * End of "$Id: auth.c,v 1.41.2.27 2004/06/29 13:15:10 mike Exp $".
+ * End of "$Id: auth.c,v 1.41.2.28 2004/10/04 19:48:56 mike Exp $".
  */
