@@ -1,5 +1,5 @@
 /*
- * "$Id: cert.c,v 1.7.2.13 2004/06/29 13:15:10 mike Exp $"
+ * "$Id: cert.c,v 1.7.2.14 2004/10/04 19:48:56 mike Exp $"
  *
  *   Authentication certificate routines for the Common UNIX
  *   Printing System (CUPS).
@@ -16,7 +16,7 @@
  *       Attn: CUPS Licensing Information
  *       Easy Software Products
  *       44141 Airport View Drive, Suite 204
- *       Hollywood, Maryland 20636-3142 USA
+ *       Hollywood, Maryland 20636 USA
  *
  *       Voice: (301) 373-9600
  *       EMail: cups-info@cups.org
@@ -293,5 +293,5 @@ InitCerts(void)
 
 
 /*
- * End of "$Id: cert.c,v 1.7.2.13 2004/06/29 13:15:10 mike Exp $".
+ * End of "$Id: cert.c,v 1.7.2.14 2004/10/04 19:48:56 mike Exp $".
  */
